Fixed color contrast on mobile category pages

--- a/css/CategoryPage.css
+++ b/css/CategoryPage.css
@@ -28,6 +28,7 @@
         #title {
             background-color: #08520f;
             margin-bottom: 0px;
+            color: #08520f;
         }
         img {
             display: none;
@@ -40,6 +41,7 @@
     #title {
         background-color: #08520f;
         margin-bottom: 0px;
+        color: #08520f;
     }
     img {
         display: none;
@@ -52,6 +54,7 @@
     #title {
         background-color: #08520f;
         margin-bottom: 0px;
+        color: #08520f;
     }
     img {
         display: none;
